syntax = "proto3";

package chat;

// Interface exported by the server.
service Chat {
    // A simple RPC.
    //
    // Signs in existing user and gets unread messages.
    rpc SignInExisting(Username) returns (UnreadsOrError) {}
    // Signs in new user and gets unread messages.
    rpc AddUser(Username) returns (UnreadsOrError) {}
    // Sends message to recipient with Username
    // rpc Send(Username, SendMessage) returns (SenderNote) {}
    // rpc List(Wildcard) returns () {}
}

message Username {
    string name = 1;
}

message UnreadsOrError {
    bool errorFlag = 1;
    string message = 2; 
}

// The response message
// message SenderNote {
//     string message = 1;
// }

